--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,10 +82,12 @@ dependencies {
     // Coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
 
-    // Retrofit
+    //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
+    implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
+    implementation group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.4.0'
 
     // Dagger
     implementation 'com.google.dagger:dagger:2.29.1'
@@ -97,4 +99,9 @@ dependencies {
 
     // Recyclerview
     implementation "androidx.recyclerview:recyclerview:1.1.0"
+
+    //RX
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
+
 }
