--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,22 +1,21 @@
 plugins {
-    id 'com.android.application'
+    id 'com.android.library'
     id 'kotlin-android'
     id 'kotlin-kapt'
-    id 'dagger.hilt.android.plugin'
-    id "scabbard.gradle" version "0.4.0"
 }
+
 android {
     compileSdkVersion 31
     buildToolsVersion "31.0.0"
 
     defaultConfig {
-        applicationId "com.kotlin.employeeaccountapp"
         minSdkVersion 17
         targetSdkVersion 31
         versionCode 1
         versionName "1.0"
-        multiDexEnabled true
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -32,56 +31,34 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        viewBinding true
-    }
-    scabbard {
-        enabled true
-        outputFormat "svg"
-    }
 }
-
-scabbard {
-    enabled true
-    outputFormat "svg"
-}
-
 
 dependencies {
-
     implementation fileTree(include: ['*.jar'], dir: 'libs')
-
     implementation project(':data')
-    implementation project(':common')
-    implementation 'androidx.multidex:multidex:2.0.1'
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.2'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.google.android.material:material:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
 
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
+
+    //  api group: 'javax.inject', name: 'javax.inject', version: '1'
+    // Dagger
+    implementation 'com.google.dagger:dagger:2.29.1'
+    kapt 'com.google.dagger:dagger-compiler:2.29.1'
+    //rx
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
+    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
     // Hilt
     implementation "com.google.dagger:hilt-android:2.29.1-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.29.1-alpha"
     implementation 'androidx.hilt:hilt-lifecycle-viewmodel:1.0.0-alpha02'
     kapt 'androidx.hilt:hilt-compiler:1.0.0-alpha02'
-
-    // Fragment KTX
-    implementation "androidx.fragment:fragment-ktx:1.2.5"
-
-    // ViewModel
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    // LiveData
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
-
-    // Annotation processor
-    kapt "androidx.lifecycle:lifecycle-compiler:2.2.0"
-
-    // Coroutines
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2'
 
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
@@ -89,20 +66,4 @@ dependencies {
     implementation 'com.squareup.okhttp3:logging-interceptor:4.9.1'
     implementation "com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0"
     implementation group: 'com.squareup.retrofit2', name: 'converter-jackson', version: '2.4.0'
-
-    // Dagger
-    implementation 'com.google.dagger:dagger:2.29.1'
-    kapt 'com.google.dagger:dagger-compiler:2.29.1'
-
-    // Glide
-    implementation 'com.github.bumptech.glide:glide:4.11.0'
-    kapt 'com.github.bumptech.glide:compiler:4.11.0'
-
-    // Recyclerview
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
-
-    //RX
-    implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
-    implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
-
 }
