--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,10 @@ android {
         versionName "1.0"
         multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunnerArguments clearPackageData: 'true'
     }
+
+
 
     buildTypes {
         release {
@@ -36,6 +39,7 @@ android {
     }
     buildFeatures {
         viewBinding true
+        dataBinding true
     }
     scabbard {
         enabled true
@@ -69,7 +73,6 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
     // Hilt
     implementation "com.google.dagger:hilt-android:2.29.1-alpha"
     kapt "com.google.dagger:hilt-android-compiler:2.29.1-alpha"
@@ -114,4 +117,13 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjava:2.2.19'
     implementation "io.reactivex.rxjava2:rxandroid:2.1.1"
 
+    //Test
+    //Test
+    testImplementation 'junit:junit:4.13.2'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    testImplementation "org.mockito:mockito-inline:2.8.9"
+    testImplementation "com.nhaarman:mockito-kotlin:1.5.0"
+    testImplementation "com.google.dagger:dagger:2.39.1"
+    androidTestImplementation "com.google.dagger:dagger:2.39.1"
 }
